# vizzy

./: .env.example  .gitignore  CLAUDE.md  PHASE_5_POLISH.md  PRD.md  README.md  flake.nix  pyproject.toml
designs/: dashboard-spec.md  treemap-spec.md  variant-matrix-spec.md
docs/: ACCESSIBILITY.md  comparison-data-model.md
scripts/: init_db.sql
scripts/migrations/: 020_performance_indexes.sql  025_edge_classification.sql  030_top_level_identification.sql  035_closure_contribution.sql  040_phase8_foundation.sql  045_data_integrity_checks.sql  050_baseline_system.sql  055_module_attribution.sql  README.md
src/vizzy/: __init__.py  config.py  database.py  main.py  middleware.py  models.py
static/css/: accessibility.css  app.css  cross-view-state.css  dashboard.css  graph-controls.css  keyboard.css  navigation.css  onboarding.css  semantic-zoom.css  why-chain.css
static/js/: accessibility.js  app.js  cross-view-state.js  graph-navigation.js  keyboard.js  onboarding.js  semantic-zoom.js  url-state.js  (+1 more)
tests/: __init__.py  test_attribution_cache.py  test_baseline.py  test_baseline_presets.py  test_closure_contribution.py  test_comparison.py  test_dashboard.py  test_essentiality.py  test_incremental.py  test_loop_detection.py  test_module_attribution.py  test_path_aggregation.py  test_redundant_links.py  test_sankey_flow.py  test_top_level_identification.py  test_validation.py  test_variant_matrix.py  test_version_detection.py  test_why_chain.py  test_why_chain_endpoint.py  test_why_chain_service.py
vizzy-implementation/: PROJECT_STATUS.md  TASK_INDEX.md
(+62 files in other folders)
